[package]
name = "rs-heart-strings"
version = "0.1.0"
edition = "2021"
description = "The BEST program to ever exist for your heart's content"
license = "UNLICENSE"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
rand = "0.8.5"
