[package]
name = "heart-strings"
version = "1.0.0"
edition = "2021"
description = "Quickly get random heart emojis to copy!"
readme ="README.md"
license = "Unlicense"
repository = "https://github.com/Wilker-uwu/rs-heart-strings"

categories = ["command-line-utilities", "text-processing"]
keywords = ["fun", "emoji", "emojis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
rand = "0.8.5"

[[bin]]
name = "hearts"
path = "src/main.rs"
